framec/tests/snapshots/go_snapshots__lifecycle_args.snap
---
source: framec/tests/go_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"go\")"
---
type LifecycleArgsFrameEvent struct {
    _message    string
    _parameters []any
}

type LifecycleArgsFrameContext struct {
    _event  LifecycleArgsFrameEvent
    _return       any
    _data         map[string]any
    _transitioned bool
}

type LifecycleArgsCompartment struct {
    state            string
    stateArgs        []any
    stateVars        map[string]any
    enterArgs        []any
    exitArgs         []any
    forwardEvent     *LifecycleArgsFrameEvent
    parentCompartment *LifecycleArgsCompartment
}

func newLifecycleArgsCompartment(state string) *LifecycleArgsCompartment {
    return &LifecycleArgsCompartment{
        state:    state,
        stateArgs: []any{},
        stateVars: make(map[string]any),
        enterArgs: []any{},
        exitArgs:  []any{},
    }
}

func (c *LifecycleArgsCompartment) copy() *LifecycleArgsCompartment {
    nc := &LifecycleArgsCompartment{
        state: c.state,
        stateArgs: append([]any{}, c.stateArgs...),
        stateVars: make(map[string]any),
        enterArgs: append([]any{}, c.enterArgs...),
        exitArgs:  append([]any{}, c.exitArgs...),
        forwardEvent:     c.forwardEvent,
        parentCompartment: c.parentCompartment,
    }
    for k, v := range c.stateVars { nc.stateVars[k] = v }
    return nc
}

type LifecycleArgs struct {
    _state_stack []*LifecycleArgsCompartment
    __compartment *LifecycleArgsCompartment
    __next_compartment *LifecycleArgsCompartment
    _context_stack []LifecycleArgsFrameContext
    sum int
    label string
}

func NewLifecycleArgs() *LifecycleArgs {
    s := &LifecycleArgs{}
    s._state_stack = make([]*LifecycleArgsCompartment, 0)
    s._context_stack = make([]LifecycleArgsFrameContext, 0)
    s.sum = 0
    s.label = ""
    s.__compartment = s.__prepareEnter("Idle", []any{}, []any{})
    s.__next_compartment = nil
    return s
}

func CreateLifecycleArgs() *LifecycleArgs {
    c := NewLifecycleArgs()
    __e := LifecycleArgsFrameEvent{_message: "$>", _parameters: c.__compartment.enterArgs}
    __ctx := LifecycleArgsFrameContext{_event: __e, _data: make(map[string]any)}
    c._context_stack = append(c._context_stack, __ctx)
    c.__kernel(&c._context_stack[len(c._context_stack)-1]._event)
    c._context_stack = c._context_stack[:len(c._context_stack)-1]
    return c
}

func (s *LifecycleArgs) hsm_chain() map[string][]string {
    return map[string][]string{
        "Idle": {"Idle"},
        "Active": {"Active"},
    }
}
func (s *LifecycleArgs) __prepareEnter(leaf string, state_args []any, enter_args []any) *LifecycleArgsCompartment {
    var comp *LifecycleArgsCompartment = nil
    for _, name := range s.hsm_chain()[leaf] {
        new_comp := newLifecycleArgsCompartment(name)
        new_comp.stateArgs = append([]any{}, state_args...)
        new_comp.enterArgs = append([]any{}, enter_args...)
        new_comp.parentCompartment = comp
        comp = new_comp
    }
    return comp
}

func (s *LifecycleArgs) __prepareExit(exit_args []any) {
    comp := s.__compartment
    for comp != nil {
        comp.exitArgs = append([]any{}, exit_args...)
        comp = comp.parentCompartment
    }
    _ = comp
}

func (s *LifecycleArgs) __kernel(__e *LifecycleArgsFrameEvent) {
    // Route event to current state.
    s.__router(__e)
    // Drain any transitions queued by the handler.
    for s.__next_compartment != nil {
        next_compartment := s.__next_compartment
        s.__next_compartment = nil
        // Exit the current (leaf) state.
        exit_event := &LifecycleArgsFrameEvent{_message: "<$", _parameters: s.__compartment.exitArgs}
        s.__router(exit_event)
        // Switch to the new compartment.
        s.__compartment = next_compartment
        // Three-branch forward-event handling.
        forward_event := next_compartment.forwardEvent
        next_compartment.forwardEvent = nil
        if forward_event == nil {
            // No forwarded event — synthesize a fresh $>.
            enter_event := &LifecycleArgsFrameEvent{_message: "$>", _parameters: s.__compartment.enterArgs}
            s.__router(enter_event)
        } else if forward_event._message == "$>" {
            // Forwarded event IS $> — dispatch directly so the
            // destination's $> handler receives the caller's payload.
            s.__router(forward_event)
        } else {
            // Forwarded event is not $> — initialize the destination
            // with a fresh $>, then dispatch the forward.
            enter_event := &LifecycleArgsFrameEvent{_message: "$>", _parameters: s.__compartment.enterArgs}
            s.__router(enter_event)
            s.__router(forward_event)
        }
        for i := range s._context_stack {
            s._context_stack[i]._transitioned = true
        }
    }
}

func (s *LifecycleArgs) __router(__e *LifecycleArgsFrameEvent) {
    switch s.__compartment.state {
    case "Idle":
        s._state_Idle(__e, s.__compartment)
    case "Active":
        s._state_Active(__e, s.__compartment)
    }
}

func (s *LifecycleArgs) __transition(next *LifecycleArgsCompartment) {
    s.__next_compartment = next
}

func (s *LifecycleArgs) Load(n int, label string) {
    __e := LifecycleArgsFrameEvent{_message: "load", _parameters: []any{n, label}}
    __ctx := LifecycleArgsFrameContext{_event: __e, _data: make(map[string]any)}
    s._context_stack = append(s._context_stack, __ctx)
    defer func() { s._context_stack = s._context_stack[:len(s._context_stack)-1] }()
    s.__kernel(&s._context_stack[len(s._context_stack)-1]._event)
}

func (s *LifecycleArgs) Total() int {
    __e := LifecycleArgsFrameEvent{_message: "total", _parameters: []any{}}
    __ctx := LifecycleArgsFrameContext{_event: __e, _data: make(map[string]any)}
    s._context_stack = append(s._context_stack, __ctx)
    defer func() { s._context_stack = s._context_stack[:len(s._context_stack)-1] }()
    s.__kernel(&s._context_stack[len(s._context_stack)-1]._event)
    var __result int
    if __rv := s._context_stack[len(s._context_stack)-1]._return; __rv != nil { __result = __rv.(int) }
    return __result
}

func (s *LifecycleArgs) Tag() string {
    __e := LifecycleArgsFrameEvent{_message: "tag", _parameters: []any{}}
    __ctx := LifecycleArgsFrameContext{_event: __e, _data: make(map[string]any)}
    s._context_stack = append(s._context_stack, __ctx)
    defer func() { s._context_stack = s._context_stack[:len(s._context_stack)-1] }()
    s.__kernel(&s._context_stack[len(s._context_stack)-1]._event)
    var __result string
    if __rv := s._context_stack[len(s._context_stack)-1]._return; __rv != nil { __result = __rv.(string) }
    return __result
}

func (s *LifecycleArgs) _state_Idle(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    if __e._message == "load" {
        s._s_Idle_hdl_user_load(__e, compartment)
        return
    }
}

func (s *LifecycleArgs) _state_Active(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    if __e._message == "$>" {
        s._s_Active_hdl_frame_enter(__e, compartment)
        return
    }
    if __e._message == "tag" {
        s._s_Active_hdl_user_tag(__e, compartment)
        return
    }
    if __e._message == "total" {
        s._s_Active_hdl_user_total(__e, compartment)
        return
    }
}

func (s *LifecycleArgs) _s_Idle_hdl_user_load(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    n := __e._parameters[0].(int)
    _ = n
    label := __e._parameters[1].(string)
    _ = label
    {
    __compartment := s.__prepareEnter("Active", []any{}, []any{n, label})
    s.__transition(__compartment)
    return
    }
}

func (s *LifecycleArgs) _s_Active_hdl_frame_enter(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    count := compartment.enterArgs[0].(int)
    _ = count
    name := compartment.enterArgs[1].(string)
    _ = name
    {
    s.sum = count + 1
    s.label = name
    }
}

func (s *LifecycleArgs) _s_Active_hdl_user_tag(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    {
    s._context_stack[len(s._context_stack)-1]._return = s.label
                    return
    }
}

func (s *LifecycleArgs) _s_Active_hdl_user_total(__e *LifecycleArgsFrameEvent, compartment *LifecycleArgsCompartment) {
    {
    s._context_stack[len(s._context_stack)-1]._return = s.sum
                    return
    }
}
